Upgrade Artemis version from 2.13 to 2.28 (#63)